[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "visio"
version = "0.1.0"
description = "A general-purpose image classification library"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "scikit-learn",
    "tensorflow>=2.10.0",
]

[tool.setuptools.packages.find]
where = ["."]