[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "visio"
version = "0.1.0"
description = "A general-purpose image classification library"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.23.0",
    "pandas>=1.5.0",
    "matplotlib>=3.6.0",
    "scikit-learn>=1.2.0",
    "tensorflow>=2.10.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["visio*"]
